2004-04-09  Benjamin Otte  <otte@gnome.org>

	* gst/gstbin.c: (gst_bin_get_type):
	* gst/gstclock.c: (gst_clock_get_type):
	* gst/gstindex.c: (gst_index_get_type):
	* gst/gstobject.c: (gst_object_get_type),
	(gst_signal_object_get_type):
	* gst/gstpad.c: (gst_pad_get_type), (gst_real_pad_get_type),
	(gst_pad_template_get_type), (gst_ghost_pad_get_type):
	* gst/gstpluginfeature.c: (gst_plugin_feature_get_type):
	* gst/gstqueue.c: (gst_queue_get_type):
	* gst/gstregistry.c: (gst_registry_get_type):
	* gst/gstsystemclock.c: (gst_system_clock_get_type):
	* gst/gstthread.c: (gst_thread_get_type):
	  don't use memchunks for these objects, use malloc instead

2004-04-08  Thomas Vander Stichele  <thomas at apestaart dot org>

	* docs/gst/.cvsignore:
	* docs/gst/Makefile.am:
	* docs/gst/gstreamer-sections.txt:
	* docs/gst/tmpl/gstaggregator.sgml:
	* docs/gst/tmpl/gstbuffer.sgml:
	* docs/gst/tmpl/gstclock.sgml:
	* docs/gst/tmpl/gstelement.sgml:
	* docs/gst/tmpl/gstfakesink.sgml:
	* docs/gst/tmpl/gstfakesrc.sgml:
	* docs/gst/tmpl/gstfdsink.sgml:
	* docs/gst/tmpl/gstfdsrc.sgml:
	* docs/gst/tmpl/gstfilesink.sgml:
	* docs/gst/tmpl/gstfilesrc.sgml:
	* docs/gst/tmpl/gstidentity.sgml:
	* docs/gst/tmpl/gstindex.sgml:
	* docs/gst/tmpl/gstinfo.sgml:
	* docs/gst/tmpl/gstmd5sink.sgml:
	* docs/gst/tmpl/gstmultifilesrc.sgml:
	* docs/gst/tmpl/gstpad.sgml:
	* docs/gst/tmpl/gstpipefilter.sgml:
	* docs/gst/tmpl/gstpipeline.sgml:
	* docs/gst/tmpl/gstpluginfeature.sgml:
	* docs/gst/tmpl/gstqueue.sgml:
	* docs/gst/tmpl/gstregistry.sgml:
	* docs/gst/tmpl/gstscheduler.sgml:
	* docs/gst/tmpl/gstshaper.sgml:
	* docs/gst/tmpl/gstspider.sgml:
	* docs/gst/tmpl/gstspideridentity.sgml:
	* docs/gst/tmpl/gststatistics.sgml:
	* docs/gst/tmpl/gstsystemclock.sgml:
	* docs/gst/tmpl/gsttee.sgml:
	* docs/gst/tmpl/gstthread.sgml:
	* docs/gst/tmpl/gsttypefind.sgml:
	* docs/gst/tmpl/gstutils.sgml:
          further doc build fixes

2004-04-07  Thomas Vander Stichele  <thomas at apestaart dot org>
