@@ -1,3 +1,11 @@
+2004-04-10  Benjamin Otte  <in7y118@public.uni-hamburg.de>
+
+	* gst/schedulers/gstbasicscheduler.c:
+	  make sure we can switch back to the main function if we're still in
+	  the main function (supposed to fix #139617)
+	* gst/schedulers/gthread-cothreads.h:
+	  don't throw an error when switching to the same cothread
+
 2004-04-09  Benjamin Otte  <otte@gnome.org>
 
 	* gst/gstbin.c: (gst_bin_get_type):
